test_programs/compile_failure/noirc_frontend_tests_resolve_fmt_strings/src/main.nr

        fn main() {
            let string = f"this is i: {i}";
            println(string);

            let new_val = 10;
            println(f"random_string{new_val}{new_val}");
        }
        fn println<T>(x : T) -> T {
            x
        }
    